--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,8 @@
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
     "from sqlalchemy import create_engine, func, text\n",
-    "from sqlalchemy.orm import declarative_base\n"
+    "from sqlalchemy.orm import declarative_base\n",
+    "from sqlalchemy import desc\n"
    ]
   },
   {
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -157,14 +158,13 @@
        "('2017-08-23',)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Find the most recent date in the data set.\n",
-    "from sqlalchemy import desc\n",
     "most_recent_date = session.query(Measurement.date).order_by(desc(Measurement.date)).first()\n",
     "most_recent_date"
    ]
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -251,18 +251,10 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "# Save the query results as a Pandas DataFrame. Explicitly set the column names\n",
     "prcp_df = pd.DataFrame(prcp_data, columns=['Date', 'Prcp Inches'])\n",
     "print(prcp_df.head(10))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
